Refactor - Clean up, add single-value ApplicationInput constructors
[#179033523]