@@ -1,7 +1,7 @@
 package org.codeforamerica.shiba.output.caf;
 
 import org.codeforamerica.shiba.CountyMap;
-import org.codeforamerica.shiba.application.*;
+import org.codeforamerica.shiba.application.Application;
 import org.codeforamerica.shiba.mnit.MnitCountyInformation;
 import org.codeforamerica.shiba.output.ApplicationInput;
 import org.codeforamerica.shiba.output.Document;
@@ -36,9 +36,7 @@ public class CoverPageInputsMapper implements ApplicationInputsMapper {
     private final MessageSource messageSource;
 
     public static final String CHILDCARE_WAITING_LIST_UTM_SOURCE = "childcare_waiting_list";
-    private static final Map<String, String> UTM_SOURCE_MAPPING = Map.of(
-            CHILDCARE_WAITING_LIST_UTM_SOURCE, "FROM BSF WAITING LIST"
-    );
+    private static final Map<String, String> UTM_SOURCE_MAPPING = Map.of(CHILDCARE_WAITING_LIST_UTM_SOURCE, "FROM BSF WAITING LIST");
 
     @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
     public CoverPageInputsMapper(CountyMap<Map<Recipient, String>> countyInstructionsMapping, CountyMap<MnitCountyInformation> countyInformationMapping, MessageSource messageSource) {
@@ -49,11 +47,11 @@ public class CoverPageInputsMapper implements ApplicationInputsMapper {
 
     @Override
     public List<ApplicationInput> map(Application application, Document document, Recipient recipient, SubworkflowIterationScopeTracker scopeTracker) {
-        ApplicationInput programsInput = getPrograms(application);
-        ApplicationInput fullNameInput = getFullName(application);
-        List<ApplicationInput> householdMemberInputs = getHouseholdMembers(application);
-        ApplicationInput countyInstructionsInput = getCountyInstructions(application, recipient);
-        ApplicationInput utmSourceInput = getUtmSource(application, document);
+        var programsInput = getPrograms(application);
+        var fullNameInput = getFullName(application);
+        var householdMemberInputs = getHouseholdMembers(application);
+        var countyInstructionsInput = getCountyInstructions(application, recipient);
+        var utmSourceInput = getUtmSource(application, document);
         return combineCoverPageInputs(programsInput, fullNameInput, countyInstructionsInput, utmSourceInput, householdMemberInputs);
     }
 
@@ -62,7 +60,7 @@ public class CoverPageInputsMapper implements ApplicationInputsMapper {
         ApplicationInput utmSourceInput = null;
         if (document == Document.CCAP) {
             String applicationUtmSource = (application.getApplicationData().getUtmSource() != null) ? application.getApplicationData().getUtmSource() : "";
-            utmSourceInput = new ApplicationInput("nonPagesData", "utmSource", List.of(UTM_SOURCE_MAPPING.getOrDefault(applicationUtmSource, "")), SINGLE_VALUE);
+            utmSourceInput = new ApplicationInput("nonPagesData", "utmSource", UTM_SOURCE_MAPPING.getOrDefault(applicationUtmSource, ""), SINGLE_VALUE);
         }
         return utmSourceInput;
     }
@@ -84,51 +82,36 @@ public class CoverPageInputsMapper implements ApplicationInputsMapper {
                 .flatMap(pageData -> ofNullable(pageData.get("programs")))
                 .map(InputData::getValue)
                 .map(values -> String.join(", ", values))
-                .map(value -> new ApplicationInput(
-                        "coverPage",
-                        "programs",
-                        List.of(value),
-                        SINGLE_VALUE))
+                .map(value -> new ApplicationInput("coverPage", "programs", value, SINGLE_VALUE))
                 .orElse(null);
     }
 
     private ApplicationInput getFullName(Application application) {
-        String pageName = "personalInfo";
-        if (application.getFlow() == LATER_DOCS) {
-            pageName = "matchInfo";
-        }
+        var pageName = application.getFlow() == LATER_DOCS ? "matchInfo" : "personalInfo";
         return ofNullable(application.getApplicationData().getPagesData().getPage(pageName))
                 .map(pageData ->
                         Stream.concat(Stream.ofNullable(pageData.get("firstName")), Stream.ofNullable(pageData.get("lastName")))
                                 .map(nameInput -> String.join("", nameInput.getValue()))
                                 .collect(Collectors.joining(" ")))
-                .map(value -> new ApplicationInput(
-                        "coverPage",
-                        "fullName",
-                        List.of(value),
-                        SINGLE_VALUE
-                ))
+                .map(value -> new ApplicationInput("coverPage", "fullName", value, SINGLE_VALUE))
                 .orElse(null);
     }
 
     private List<ApplicationInput> getHouseholdMembers(Application application) {
         return ofNullable(application.getApplicationData().getSubworkflows().get("household"))
                 .stream().map(subworkflow -> IntStream.range(0, subworkflow.size()).mapToObj(i -> {
-                            PageData householdMemberInfo = subworkflow.get(i).getPagesData().get("householdMemberInfo");
+                            var householdMemberInfo = subworkflow.get(i).getPagesData().get("householdMemberInfo");
+                            var firstName = householdMemberInfo.get("firstName").getValue(0);
+                            var lastName = householdMemberInfo.get("lastName").getValue(0);
+                            var fullName = firstName + " " + lastName;
+                            var fullNameInput = new ApplicationInput("coverPage", "fullName", fullName, SINGLE_VALUE, i);
 
-                            String firstName = householdMemberInfo.get("firstName").getValue(0);
-                            String lastName = householdMemberInfo.get("lastName").getValue(0);
-                            ApplicationInput fullName = new ApplicationInput("coverPage", "fullName",
-                                    List.of(String.join(" ", firstName, lastName)),
-                                    SINGLE_VALUE, i);
+                            var programsValue = String.join(", ", householdMemberInfo.get("programs").getValue());
+                            var programsInput = new ApplicationInput("coverPage", "programs", programsValue, SINGLE_VALUE, i);
 
-                            ApplicationInput programs = new ApplicationInput("coverPage", "programs",
-                                    List.of(String.join(", ", householdMemberInfo.get("programs").getValue())),
-                                    SINGLE_VALUE, i);
-
-                            return List.of(fullName, programs);
+                            return List.of(fullNameInput, programsInput);
                         }).flatMap(Collection::stream).collect(Collectors.toList())
-                ).flatMap(Collection::stream).collect(Collectors.toList());
+                ).flatMap(Collection::stream).toList();
     }
 
     private ApplicationInput getCountyInstructions(Application application, Recipient recipient) {
